--- a/src/containers/index.css
+++ b/src/containers/index.css
@@ -47,8 +47,7 @@ body{
 }
 .modal div{
   background: #1564a5;
-  padding: 30px;
-  border: 2px solid #E0F2E9;
+  padding: 20px;
   border-radius: 5px;
   color: #E0F2E9;
   text-align: center;
@@ -153,8 +152,9 @@ body{
   display: flex;
   flex-direction: row;
 }
-.sn{
+.sn:not(:first-child){
   max-width: 50px;
+  margin-top: 30px;
 }
 .center-items{
   text-align: center;
@@ -269,7 +269,41 @@ header ul li:hover{
 .logo a span:hover{
   font-weight: bolder;
 }
+.party-logo{
+  width: 150px;
+  height: 150px;
+}
 /* End of header */
+.relative{
+  position: relative;
+}
+.logourl:hover{
+  opacity: 0.5;
+  cursor: pointer;
+}
+.hide{
+  display: none;
+}
+.logourl {
+  border-radius: 50%;
+  border: 2px solid #fff;
+  width: 200px;
+  height: 150px;
+
+
+}
+.camera{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  right: 120px;
+}
+
+
+
+
 
 main{
   flex: 1;
